# Chatty-Chronos-v2

./: .gitignore  Dockerfile  Install_Windows.bat  README.md  ROADMAP.md  STEERING.md  Start_Chronos.bat  TUTORIAL_HOW_TO_USE.md  TUTORIAL_INSTALLATION.md  deploy.py  docker-compose.yml  install-wsl.ps1  main.py  pyproject.toml  requirements.txt  starter_web.bat  uninstall.py
.devcontainer/: Dockerfile  devcontainer.json
cli/: commands.py
config/: nvidia_models.json
core/: __init__.py  agent.py  agent_registry.py  agent_v2.py  chat.py  config.py  context.py  delegator.py  logger.py  mcp_client.py  memory.py  memory_v2.py  permissions.py  repl_daemon.py  session.py  state.py  team.py  telemetry.py
docs/: CHRONOS_KNOW_HOW.md  raport_comenzi.md  raport_diagnostic.md  raport_stadiu.md
llm/: __init__.py  core_adapter.py  fallback.py  llama_cpp_launcher.py  llamacpp_provider.py  ollama_provider.py  openai_provider.py  rate_limit.py  server_manager.py
plugins/: __init__.py  base.py  loader.py
rag/: __init__.py  embeddings.py  indexer.py  retriever.py  retriever_v2.py
scripts/: img2ansi.py  img2ascii.py  init_db.py  query_db.py  test_streaming.py
spec/: __init__.py  generator.py
static/: index.html
tests/: test_agent.py  test_agent_final.py  test_agent_registry.py  test_agent_v2.py  test_chat.py  test_chat_stream.py  test_chat_v3.py  test_commands.py  test_commands_v2.py  test_config.py  test_context.py  test_context_v2.py  test_core_adapter.py  test_delegator.py  test_deploy.py  test_embeddings.py  test_fallback.py  test_filesystem.py  test_filesystem_v2.py  (+36 more)
(+24 files in other folders)
